tests/incremental_haste_all_providers/incremental_haste_all_providers.exp
Initial status:
Error ------------------------------------------------------------------------------------------------------- bar.js:3:1

Cannot cast `foo` to empty because number [1] is incompatible with empty [2]. [incompatible-type]

   bar.js:3:1
   3| foo as empty; // error: foo.js.flow declares foo to be number
      ^^^

References:
   foo.js.flow:2:25
   2| declare module.exports: number;
                              ^^^^^^ [1]
   bar.js:3:8
   3| foo as empty; // error: foo.js.flow declares foo to be number
             ^^^^^ [2]



Found 1 error

Change .js file:
Error ------------------------------------------------------------------------------------------------------- bar.js:3:1

Cannot cast `foo` to empty because number [1] is incompatible with empty [2]. [incompatible-type]

   bar.js:3:1
   3| foo as empty; // error: foo.js.flow declares foo to be number
      ^^^

References:
   foo.js.flow:2:25
   2| declare module.exports: number;
                              ^^^^^^ [1]
   bar.js:3:8
   3| foo as empty; // error: foo.js.flow declares foo to be number
             ^^^^^ [2]



Found 1 error
